<resources>
    <string name="app_name">Market Plus</string>
    <string name="desc">logo</string>
    <string name="login">LOGIN</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forgot_pass">Lupa Password?</string>
    <string name="other_option">Atau login dengan</string>
    <string name="login_small">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_small">Registrasi</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="regsitrasi">REGISTRASI</string>
    <string name="email">email</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="name">Market Plus</string>
    <string name="search">Search</string>
</resources>