<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.aeipoo.ui.LoginPage"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/desc"
                app:srcCompat="@drawable/logo_clear_no_text"
                tools:layout_editor_absoluteX="169dp"
                tools:layout_editor_absoluteY="82dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Hallo"
                    android:textColor="@color/black"
                    android:textSize="34sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="IPO Hunters"
                    android:textColor="@color/blue"
                    android:textSize="16sp"></TextView>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="53dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/regsitrasi"
            android:textColor="@color/blue"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/namaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/_icon__profile_circle_"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginTop="41dp"
            android:background="@drawable/bg_editteks"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginTop="41dp"
            android:background="@drawable/bg_editteks"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_editteks"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="41dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/buat_akun" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12.75sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_small"
                android:layout_marginStart="4dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12.75sp"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
